src/test/ui/lifetimes/lifetime-errors/ex2d-push-inference-variable-2.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex2d-push-inference-variable-2.rs:6:33
   |
LL | fn foo<'a, 'b, 'c>(x: &'a mut Vec<Ref<'b, i32>>, y: Ref<'c, i32>) {
   |                                   ------------      ------------ these two types are declared with different lifetimes...
LL |     let a: &mut Vec<Ref<i32>> = x;
   |                                 ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

